--- a/flexboxarticles/style.css
+++ b/flexboxarticles/style.css
@@ -1,4 +1,5 @@
 html {
+  
     box-sizing: border-box;
     background-color: rgb(236, 242, 248);
   }
@@ -10,8 +11,9 @@ html {
     justify-content: center;
     margin-top: 20%;
     margin-bottom: 20%;
-    
+   
   }
+  
   
   p,h3{
     font-size: 12px;
@@ -22,6 +24,7 @@ html {
 
 .felx-section{
     display: flex;
+  
     padding: 5px;
    gap: 1rem;
    width: 800px;
@@ -58,12 +61,15 @@ html {
 .leftside{
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 10px;
     width: 75%;
+    height: 400px;
+    flex-shrink: 1;
 }
 .rightside{
     width: 25%;
     height: 400px;
+    flex-shrink: 1;
 }
 .firstrow{
     display: flex;
