p before h3 no idea why I did it xD

--- a/flexboxarticles/style.css
+++ b/flexboxarticles/style.css
@@ -24,12 +24,10 @@ html {
 
 .felx-section{
     display: flex;
-  
-    padding: 5px;
+
    gap: 1rem;
    width: 800px;
-   
-   
+   height: 400px;
 }
   .profile-picture{
     width: 30px;
@@ -63,13 +61,12 @@ html {
     flex-direction: column;
     gap: 10px;
     width: 75%;
-    height: 400px;
-    flex-shrink: 1;
+    height: 100%;
+
 }
 .rightside{
     width: 25%;
-    height: 400px;
-    flex-shrink: 1;
+    height: 100%;
 }
 .firstrow{
     display: flex;
@@ -83,28 +80,32 @@ html {
 }
 
 .daniel{
-    padding: 5px;
+  overflow: hidden;
+    padding: 10px;
     background: rgb(117,65,200);
     color: white;
     flex-basis: 66%;
     
 }
 .jonathan{
-    padding: 5px;
+  overflow: hidden;
+    padding: 10px;
     background: rgb(72,85,106);
     color: white;
     flex-basis: 33%;
 
 }
 .jeanette{
-    padding: 5px;
+    padding: 10px;
     background: white;
     flex-basis: 33%;
+    overflow: hidden;
     
 
 }
 .patrick{
-    padding: 5px;
+  overflow: hidden;
+    padding: 10px;
     background: rgb(25,33,46);
     color: white;
     flex-basis: 66%;
@@ -113,11 +114,14 @@ html {
     
 }
 .kira{
-    padding: 5px;
+  overflow: hidden;
+    padding: 10px;
     background: white;
+    display: flex;
    
 }
 .content:nth-child(2){
+  
     font-size: 12px;
 }
 article{
