--- a/flexboxarticles/style.css
+++ b/flexboxarticles/style.css
@@ -21,6 +21,13 @@ html {
     padding: 0;
     font-family: 'Josefin Sans', sans-serif;
   }
+  .container{
+    background-color: rgb(252, 180, 195);
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    border-radius: 5px;
+  }
 
 .felx-section{
     display: flex;
