responsivness without media query
Daily-project:08/30/2022
 Trying cloning maktub template(themeforest), one of my favorite templates, using only html and css...
I used grid and flex box to achieve this and my code is not clean yet. I am trying to get better each time. I set a goal of one project every day until I master css. Then I'll continue my journey towards javascript and react js.

--- a/flexboxarticles/style.css
+++ b/flexboxarticles/style.css
@@ -27,11 +27,12 @@ html {
     flex-direction: column;
     padding: 10px;
     border-radius: 5px;
+    justify-content: center;
+   align-items: center;
   }
 
 .felx-section{
     display: flex;
-
    gap: 1rem;
    width: 800px;
    height: 400px;
